Fix styling on Safari

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,3 +1,13 @@
+
+h1 select {
+    font-size: 0.8em;
+    border: 1px solid #5e5e5e;
+    border-radius: 10px;
+    padding: 0.2rem;
+    background-color: white;
+    outline: none;
+}
+
 .main-dot {
     -webkit-box-flex: 0;
     -moz-box-flex: 0;
